--- a/content/2020-09-08-1.md
+++ b/content/2020-09-08-1.md
@@ -10,8 +10,8 @@ tags:
 類似度について調べてても頭に入るとこ入らないところがあるので一人で考えてみる。
 <br>
 <br>
-### 1次元の数の類似度は、距離の絶対値で分かる。abs(a - b)で分かる。
-例えば年齢の類似度なら、完全に単にabs(a-b)やってそれが小さい人が類似してるって感じになるだろう。
+### 1次元の数の類似度は、距離の絶対値で分かる。abs(a,b)で分かる。
+例えば年齢の類似度なら、完全に単にabs(a,b)やってそれが小さい人が類似してるって感じになるだろう。
 <br>
 <br>
 それで言えば2次元の数の類似度はなんだろう。
@@ -95,4 +95,5 @@ rgbはまた3次元のデータとして捉えるのかそれとも、、、
 **1,ディープラーニングはどうやってるの（レコメンドとかいい感じに見えるけど画期的なことしてるのかな）**<br>
 **2,他には類似度計算する方法何あるの**<br>
 **3,性質の違うカラム達が並ぶcsvの行同士の類似度を出すのはどうやるの**<br>
+**4,そもそも「商品Xとの類似度」をすべての商品が持ってる場合レコード数がすごいことになるだろうけどそこらへんどうやってんの<br>
 ここらへんが謎だということでまた、、
